created game logic

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -7,22 +7,19 @@
 	</head>
 	<body>
 		<header>
-			<h1>MEMORY GAME</h1>
+			<h1>Memory Game</h1>
 		</header>
 		<nav>	
-			<a href="#instructions">INSTRUCTIONS</a>
-			<a href="#game">GAME</a>
+			<a href="#instructions">Instructions</a>
+			<a href="#game">Game</a>
 		</nav>
 		<main>
-			<h2 id="instructions">INSTRUCTIONS</h2>
+			<h2 id="instructions">Instructions</h2>
 			<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
-			<div>
-				<img src="images/back.png" alt="Queen of Diamonds">
-				<img src="images/back.png" alt="Queen of Hearts">
-				<img src="images/back.png" alt="King of Diamonds">
-				<img src="images/back.png" alt="King of Hearts">
+			<div id="game-board" class="board clearfix">
+				
 			</div>
-			<h2 id="game">GAME</h2>
+			<h2 id="game">Game</h2>
 			<p>Concentration is a great way to pass the time, and even allows you to put your memorization skills to the test! Playing this game might even help improve cognitive function and keep your memory sharp.</p>
 		</main>	
 		<footer class="clearfix">
